# decoder

./: CMakeLists.txt  README.md  library.json  library.properties  pyproject.toml
.github/workflows/: PR_build.yml  build.yml  manual_test-pypi.yml  publish.yml  publish_docs.yml
docs/: README.md
docs/devices/: BC08.md  BEESMART_HIVENET.md  CGP22C.md  Ecoflow.md  SensorP_HT.md  SensorP_HTP.md  THB1.md  UT363BT.md  VCH6003.md  VICTRON_BSC.md  VICTRON_DCDC.md  VICTRON_ORIONXS.md  VICTRON_SBP.md  devices_template.html
docs/participate/: adding-decoders.md
python/: CMakeLists.txt
src/: decoder.cpp  decoder.h  devices.h
src/devices/: BEESMART_HIVENET_json.h  SBHT_003C_json.h  VICTRON_DCDC_json.h  VICTRON_ORIONXS_json.h
tests/BLE/: CMakeLists.txt  test_ble.cpp
tests/BLE_fail/: CMakeLists.txt
